# XsStudies

./: CMakeLists.txt  README.md  XsStudies.cc  anti_proton.in  gamma.in  kaon+.in  kaon-.in  neutron.in  pi+.in  pi-.in  proton.in  proton_C.in
data/: B5.root  G4DiffuseElastic_pi-_100MeV_G4Ar.root  G4DiffuseElastic_pi-_150MeV_G4Ar.root  G4DiffuseElastic_pi-_200MeV_G4Ar.root  G4DiffuseElastic_pi-_250MeV_G4Ar.root  G4DiffuseElastic_pi-_300MeV_G4Ar.root  G4DiffuseElastic_pi-_350MeV_G4Ar.root  G4DiffuseElastic_pi-_400MeV_G4Ar.root  G4DiffuseElastic_pi-_450MeV_G4Ar.root  G4DiffuseElastic_pi-_500MeV_G4Ar.root  G4DiffuseElastic_pi-_550MeV_G4Ar.root  G4DiffuseElastic_pi-_600MeV_G4Ar.root  G4DiffuseElastic_pi-_650MeV_G4Ar.root  G4DiffuseElastic_pi-_700MeV_G4Ar.root  G4DiffuseElastic_pi-_800MeV_G4C.root  G4DiffuseElastic_proton_1000MeV_G4C.root  G4Elastic_pi-_100MeV_G4Ar.root  G4Elastic_pi-_150MeV_G4Ar.root  G4Elastic_pi-_200MeV_G4Ar.root  G4Elastic_pi-_250MeV_G4Ar.root  G4Elastic_pi-_300MeV_G4Ar.root  G4Elastic_pi-_350MeV_G4Ar.root  G4Elastic_pi-_400MeV_G4Ar.root  G4Elastic_pi-_450MeV_G4Ar.root  G4Elastic_pi-_500MeV_G4Ar.root  G4Elastic_pi-_550MeV_G4Ar.root  G4Elastic_pi-_600MeV_G4Ar.root  G4Elastic_pi-_650MeV_G4Ar.root  G4Elastic_pi-_700MeV_G4Ar.root  G4Elastic_pi-_800MeV_G4C.root  G4Elastic_proton_1000MeV_G4C.root  HEPData-ins135538-v1-root.root  HEPData-ins15083-v1-Table_1.C  HEPData-ins15083-v1-Table_1.root  norm.C  normpi.C  plotdiffusepi.C  plotpi.C  scanAr.sh
include/: ActionInitialization.hh  Analysis.hh  XsStudiesDetectorConstruction.hh  XsStudiesDetectorConstructionMessenger.hh  XsStudiesEventAction.hh  XsStudiesEventActionMessenger.hh  XsStudiesPrimaryGeneratorAction.hh  XsStudiesRun.hh  XsStudiesRunAction.hh  XsStudiesSD.hh  globs.hh
productionscripts/: make_Inputs.py
scripts/: makeInputs.py  makePi+Inputs.py  makePi-Inputs.py  scanAr.sh
(+9 files in other folders)
